--- a/assets/scss/journal.scss
+++ b/assets/scss/journal.scss
@@ -250,7 +250,7 @@ a {
       opacity: 0;
       text-align: left;
       padding-left: 12px;
-      padding-top: 8px;
+      //padding-top: 8px;
       //justify-content: space-between;
       //align-items: stretch;
       flex: 1;
